--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
 	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:${version}")
 
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+
 	//JUnit4 추가
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 		exclude group: "org.hamcrest", module: "hamcrest-core"
